# hmm_impl

./: README.md  pyproject.toml
hmm_impl/: data.py  hmm.py
