[tool.poetry]
name = "hmm-impl"
version = "0.1.0"
description = "Hidden markov model implementation"
authors = ["Lumen Yang <lumen.yang@lumeny.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
hmmlearn = "^0.3.0"
pandas = "^2.1.4"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
yapf = "^0.40.2"
pyright = "^1.1.341"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
